public/styles/post.css
@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
* {
    box-sizing: border-box;
}

h1 {
    text-decoration: underline;
    text-decoration-color: #85b6cb;
    text-align: center;
}

body {
    margin: 0;
    font-family: 'Roboto', Arial;
    color: #262834;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Raleway';
    font-weight: bolder;
}

p {
    font-size: 12pt;
}

h3, #subjectchoice, #filter {
    margin-left: 32px;
    margin-right: 32px;
}

#subjectchoice {
    width: 95%;
    margin-bottom: 8px;
}

#filter {
    outline: none;
}

nav {
    font-family: "Raleway";
}

#content {
    padding-top: 0px;
    padding: 20px;
}

#posts {
    margin: 16px;
}

#content>a, #content>a:hover {
    color: #283b42;
    font-weight: bolder;
    text-decoration: underline;
}

#posts-dat {
    font-family: "Roboto";
    border-radius: 10px;
}

body {
    background-color: #f1f1f1;
}

h1, h2, h3, h4, h5 {
    font-family: "Raleway";
    font-weight: 500;
    color: #283b42;
}

button {
    border-radius: 20px;
    border-style: solid;
    padding: 2px 16px 2px 16px;
    font-family: 'Raleway';
    background-color: #1d6a96;
    border-color: #1d6a96;
    color: #f1f1f1;
}

#content>a {
    color: #1d6a96;
}

@media only screen and (min-width: 1024px) {
    #posts-dat {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
    }
}

@media only screen and (min-width: 768px) and (max-width: 1023px) {
    #posts-dat {
        display: grid;
        grid-template-columns: 1fr 1fr;
    }
}

@media only screen and (max-width: 767px) {
    #posts-dat {
        display: grid;
        grid-template-columns: 1fr;
    }
}

#nopost {
    display: none;
    margin-left: 32px;
    margin-top: 16px;
}

